--- a/stile.css
+++ b/stile.css
@@ -1,4 +1,13 @@
 body {
-    color:aliceblue;
-    background:black ;
+    color: white;
+    background-color: black;
 }
+ 
+header{
+
+ border-bottom: solid 2px rgb(42,122,228);
+padding: 20px;
+font-size: 32px;
+color: rgb(42,122,228);
+}
+ 
